# docs/swagger.json
@@ -253,7 +253,12 @@
                         "description": "OK",
                         "schema": {
                             "type": "object",
-                            "additionalProperties": true
+                            "additionalProperties": {
+                                "type": "array",
+                                "items": {
+                                    "$ref": "#/definitions/dao.CarModel"
+                                }
+                            }
                         }
                     }
                 }
